force-app/main/default/objects/PCG_Profiled_Content_History__c/PCG_Profiled_Content_History__c.object-meta.xml
<CustomObject>
    <label>Profiled Content History</label>
    <nameField>
        <displayFormat>PCG-{00000000}</displayFormat>
        <label>Profiled Content History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profiled Content History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>