force-app/main/default/objects/PCG_Profiled_Content_History__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>5</length>
    <type>Text</type>
</CustomField>