force-app/main/default/objects/PCG_Profiled_Content_History__c/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <label>Document Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>