force-app/main/default/objects/PCG_Profiled_Content_History__c/fields/Library_Id__c.field-meta.xml
<CustomField>
    <fullName>Library_Id__c</fullName>
    <label>Library Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>