force-app/main/default/objects/PCG_Profiled_Content_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Title__c</columns>
    <columns>Version__c</columns>
    <columns>Library_Name__c</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>